# bitKlavier2

./: .env  .gitignore  .gitmodules  .gitmodules.orig  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.orig  Doxyfile  README.md  README.md.orig  analyze_sf2.py  bitklavier_plugin_fix.patch  cable_view.patch  construction_site.patch  full_interface.patch  modulation_manager.patch  open_gl_image.patch  plugin_processor.patch  preparation_section.patch  sample_load_manager.patch  synth_base.patch
.cache/jb/: compilation_graph.txt  index_stats.txt  module.modulemap  modules_graph.txt
.cache/jb/cache/: BKItem-18EGMFJT6CKLM.pcm  BKSliders-3DLDPLOJE50SG.pcm  BinaryData-2JABWOY4NEXZV.pcm  ConstructionSite-1V28U8WHCMXDU.pcm  ConstructionSite-3DLDPLOJE50SG.pcm  EnvParams-R9NF9UMI9E2E.pcm  FullInterface-1V28U8WHCMXDU.pcm  Identifiers-1UY9L1SRGGT45.pcm  ModulationConnection-R9NF9UMI9E2E.pcm  ModulationProcessor-R9NF9UMI9E2E.pcm  ModulatorBase-14GKIECNAH670.pcm  OpenGL_LabeledBorder-3DLDPLOJE50SG.pcm  PluginBase-3ADNJYQP487IC.pcm  PluginBase-YV6LWH0W33CC.pcm  PreparationSection-1V28U8WHCMXDU.pcm  PreparationStateImpl-R9NF9UMI9E2E.pcm  Sample-1V28U8WHCMXDU.pcm  TuningProcessor-1DU9BXN2O8KOX.pcm.lock-a8f89ff9  UserPreferences-R6W8NWDMN5P8.pcm  UserPreferences-VT5EVQGA406F.pcm  VariantConverters-3EQB4W8V5BVEG.pcm  catch_console_colour-1GWAS3UKHX4R8.pcm  catch_console_colour-3JLHRGR9ZU7IB.pcm  catch_context-1GWAS3UKHX4R8.pcm  catch_context-20JB0T9TG1A8M.pcm  catch_stdstreams-1GWAS3UKHX4R8.pcm  catch_stdstreams-20JB0T9TG1A8M.pcm  common-11BPKAUT4VEZF.pcm  common-2DFDQ34QDLATJ.pcm  common-NRTL7WLH7HN4.pcm  config-2JABWOY4NEXZV.pcm  default_look_and_feel-1UY9L1SRGGT45.pcm  juce_TargetPlatform-2JABWOY4NEXZV.pcm  juce_audio_processors-3EQB4W8V5BVEG.pcm  juce_data_structures-1UY9L1SRGGT45.pcm  juce_dsp-NRTL7WLH7HN4.pcm  juce_gui_basics-1UY9L1SRGGT45.pcm  modules.idx  open_gl_combo_box-24WBXHZP0V1UY.pcm  open_gl_combo_box-2R0V17E3WNDA6.pcm  (+96 more)
.claude/commands/: bkpush.md  bkship.md
.github/workflows/: build_and_test.yml  build_and_test.yml.orig
assets/: default.bitklavierskin
benchmarks/: Benchmarks.cpp  Benchmarks.cpp.orig
docs/: CLAUDE_bKCodeSummary.md  CreatingDeleting.md  MTS-ESP Dev Prompts.md  MTS-ESP-Master-Spec.md  MTS-ESP-Master-UserGuide.md  bitKlavierDevNotes.md  comment-formatting.md
docs/ai-context/: AI_Context_Documentation-UsageGuide.md  MODULATION_SYSTEM.md  PARAMETERS.md  README.md  RESONANCE_THREADING.md
memory/: MEMORY.md  busreverb_save_bug.md  ci_git_apply_safe_directory.md  clone_constructor_null_params.md  feedback_no_worktrees.md  mute_solo_system.md  piano_cache.md  plugin_state_restore.md  sample_load_lifecycle.md  setvisible_during_event_dispatch.md  valuetree_setproperty_reentrancy.md
misc_scripts/outd/: file.cpp
misc_scripts/source/: file.cpp
mycmake/: CheckParameterIDUnderscores.cmake
packaging/: distribution.xml  distribution.xml.template  dmg.json  dmg.json.orig  entitlements.entitlements  installer.iss  installer.iss.orig
packaging/resources/: README  postinstall
patches/: juce_opengl_mac_mouse_forwarding.patch
scripts/: sign_for_instruments.sh
source/: PluginEditor.cpp  PluginEditor.cpp.orig  PluginEditor.h  PluginEditor.h.orig  PluginProcessor.cpp  PluginProcessor.cpp.orig  PluginProcessor.h  PluginProcessor.h.orig
source/common/: ApplicationCommandHandler.cpp  ApplicationCommandHandler.h  Factory.h  Identifiers.h  LegacyGalleryImporter.cpp  LegacyGalleryImporter.h  TuningUtils.cpp  TuningUtils.h  Tunings.h  TuningsImpl.h  UserPreferences.h  array_to_string.cpp  array_to_string.h  bk_ParameterTypeHelpers.h  bk_XMLSerializer.h  border_bounds_constrainer.cpp  border_bounds_constrainer.h  buffer_debugger.cpp  buffer_debugger.h  common.h  load_save.cpp  load_save.h  startup.cpp  startup.h  synth_gui_interface.cpp  synth_gui_interface.h  target_types.h  utils.cpp  utils.h
source/common/ObjectLists/: ConnectionsList.cpp  (+5 more)
source/interface/: FullInterface.cpp  FullInterface.cpp.orig  FullInterface.h  ModulationLine.cpp  ModulationLine.h  PluginList.h
source/modulation/: LFOModulator.cpp  LFOModulator.h  ModulationConnection.cpp  ModulationConnection.h  ModulationList.cpp  ModulationList.h  ModulationModuleSection.cpp  ModulationModuleSection.h  ModulationSection.cpp  ModulationSection.h  ModulatorBase.cpp  ModulatorBase.h  ModuleListInterface.cpp  ModuleListInterface.h  RampModulator.cpp  RampModulator.h  StateModulator.cpp  StateModulator.h  bar_renderer.cpp  bar_renderer.h  modulation_button.cpp  modulation_button.h  modulation_manager.cpp  modulation_manager.h  modulation_meter.cpp  modulation_meter.h
source/standalone/: main.cpp  main.cpp.orig  synth_editor.cpp  synth_editor.h
source/synthesis/: PluginScannerSubprocess.h  SampleLoadManager.cpp  SampleLoadManager.h  parameter_change_buffer.h  synth_base.cpp  synth_base.cpp.orig  synth_base.h
test-presets/: 2mods.bk2  ADSRsavetest.bk2  BasicNostalgic.bk2  BasicPiano.bk2  BasicPiano_BlanchetSaveTest.bk2  BasicPiano_BlanchetSaveTest2.bk2  BasicPiano_saveDupeTest.bk2  BasicSynchronic.bk2  BasicTuningMod.bk2  BlendronicTestWithTargets.bk2  ClusterMinMax_StateMod_test.bk2  ClusterMinMax_StateSave_test.bk2  ClusterMinMax_StateSave_test2.bk2  ClusterMinMax_StateSave_test3.bk2  ClusterMinMax_StateSave_test4.bk2  DirectBasic.bk2  DirectBasic_soundfontGlobal.bk2  DuelingRampMods.bk2  DuplicatePiano_savetest.bk2  KeymapSaveTest.bk2  LFO_ModTriggerTest.bk2  MODRESET.bk2  MultiPianoName_savetest.bk2  MultiSliderStateMod_test.bk2  NostalgicSynchronicMode_test.bk2  NostalgicTest.bk2  RampModAlternate_reset_test.bk2  RampModAlternate_time_test.bk2  RampModTest.bk2  RampModTest2.bk2  ResetMultipleMods_test.bk2  ResonanceSave.bk2  ResonanceSave2.bk2  ResonanceTargetTest.bk2  SampleLibrarySave_test.bk2  StateModSaveReopenTest.bk2  Synchronic2DMultisliderTest.bk2  SynchronicSaveSimple.bk2  SynchronicSaveTest.bk2  SynchronicStateModresetnew.bk2  (+69 more)
tests/: Catch2Main.cpp  MTSESPClientWrapper_test.cpp  MTSESPMasterCoordinator_test.cpp  PluginBasics.cpp  PluginBasics.cpp.orig
tests/helpers/: test_helpers.h
(+6669 files in other folders)
